--- a/page3.html
+++ b/page3.html
@@ -22,7 +22,7 @@
 				<h1>Zachary Hernandez Valverde</h1>
 				<p>Phone-number: +506 6158 0647</p>
 				<p>Adress: Siquirres, Limon, Costa Rica</p>
-				<p>GitHub: <a href="#">https://github.com/zetahv12900</a></p>
+				<p>GitHub: <a href="https://github.com/zetahv12900" target="_blank">https://github.com/zetahv12900</a></p>
 				<p>E-mail: zetahv12900@gmail.com</p>
 			</div>
 		</div>
