--- a/Designs1.html
+++ b/Designs1.html
@@ -19,7 +19,7 @@
 		<div class="info-block">
 			<div class="content">
 				<div class="content-title">
-					<button class="button download-button">Download This Template</button>
+					<a href="https://github.com/zetahvdev/Project-no1-Web-Site" target="_blank"><button class="button download-button">Download This Template</button></a>
 					<button class="button social-button fb-button">f</button>
 					<button class="button social-button yb-button">y</button>
 
