--- a/Designs1.html
+++ b/Designs1.html
@@ -4,6 +4,7 @@
 	<title>Zachary`s design - portfolio</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="style2.css">
 </head>
 <body>
@@ -20,8 +21,6 @@
 			<div class="content">
 				<div class="content-title">
 					<a href="https://github.com/zetahvdev/Project-no1-Web-Site" target="_blank"><button class="button download-button">Download This Template</button></a>
-					<button class="button social-button fb-button">f</button>
-					<button class="button social-button yb-button">y</button>
 
 				</div>
 				<div class="content-main">
