Header responsive fix
This is the first attempt to make this website resposive.
Needs to be done:
- Text responsiveness
- Navbar responsive

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>	
 <body>
 	
-	<div class="main d-flex flex-column background">
+	<div class="main background">
 		<div class=""></div>
 		<nav class="fixed-top">
 			<ul>
@@ -24,18 +24,18 @@
 			</ul>
 			<hr class="hr-white">
 		</nav>
-		<div class="info-block">
-			<div class="content">
-				<!---<div class="content-title"><h1>Front-End Developer</h1></div>-->
-				<div class="content-main">
-					<div class="content-left">
-						<div id="info-ul">
-							<h1>Desarrollo <br>Web</h1>
-							<h5 class="foot-note">ELEGANT AND RESPONSIVE WEBSITES</h5>
-						</div>
+		<div class="info-block  container-fluid">
+			<div class="block-main row">
+				<div class="col-9 content-left">
+					<div id="info-ul">
+						<h1>Desarrollo <br>Web</h1>
+						<h5 class="foot-note">ELEGANT AND RESPONSIVE WEBSITES</h5>
 					</div>
+				</div>
+				<div class="col-4 content-right-container">
 					<div class="content-right">
-						<div class="info-section-header">
+						<div class="info-section-header d-flex align-items-center">
+							<div class="color-bg-blue"></div>
 							<div class="logo-con">
 								<div class="logo"></div>
 								<div class="mt-5">
@@ -54,8 +54,18 @@
 		</div>
 		<!--<a href="#" class="logo"></a>-->
 	</div>
-	<article class="yolo" style="margin: 1000px 0px;">
-		
+	<article class="yolo" style="margin: 0">
+		<div class="container-fluid service-card-cont">
+			<h2>Here I am!</h2>
+			<div class="card-deck">
+				<div class="card bg-primary">
+					<div class="card-body text-center">Hello</div>
+				</div>
+				<div class="card bg-secondary">
+					<div class="card-body text-center">Hello again</div>
+				</div>
+			</div>
+		</div>
 	</article>
 </body>
 </html>
