--- a/index.html
+++ b/index.html
@@ -11,18 +11,25 @@
 	<script type="text/javascript" src="behaviour.js"></script>
 	<link href="http://fonts.cdnfonts.com/css/glacial-indifference-2" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./assets/css/main.css">
+	<link rel="stylesheet" type="text/css" href="./assets/css/tools/_media-queries.css">
 </head>	
 <body>
 	
 	<div class="main background">
 		<div class=""></div>
-		<nav class="fixed-top">
-			<ul>
-				<li><a href="#" class="">CONTACT</a></li>
-				<li><a href="page3.html">ABOUT ME</a></li>
-				<li><a class="is-current" href="designs/designs.html">HOME</a></li>
-			</ul>
-			<hr class="hr-white">
+		<nav class="navbar navbar-expand-md navbar-black fixed-top">
+			<button class="nav-dropdown-style navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon">
+					
+				</span>
+			  </button>
+			  <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item active"><a href="#" class="nav-link">CONTACT</a></li>
+					<li class="navbar-bar"><a href="page3.html" class="nav-link">ABOUT ME</a></li>
+					<li class=" navbar-bar"><a class="is-current nav-link" href="designs/designs.html">HOME</a></li>
+				</ul>
+			  </div>
 		</nav>
 		<div class="info-block  container-fluid">
 			<div class="block-main row">
@@ -67,5 +74,9 @@
 			</div>
 		</div>
 	</article>
+	<!--Bootstrap dependencies-->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
